--- a/hello.html
+++ b/hello.html
@@ -19,7 +19,11 @@
 	<div id="top-banner">
 		Bienvenue dans cette formation GIT !
 	</div>
-
+<div>
+	<p>
+		hello my name is Faizou 
+	</p>
+</div>
 
 </body>
 
