--- a/hello.html
+++ b/hello.html
@@ -14,17 +14,24 @@
 
 
 <body>
-
 	<!-- TITRE -->
 	<div id="top-banner">
 		Bienvenue dans cette formation GIT !
 	</div>
-<div>
-	<p>
-		hello my name is Faizou 
-	</p>
-</div>
-
+	<!-- description -->
+	<div>
+		<h1> ma description </h1>
+		<p>
+			hello my name is Faizou
+		</p>
+	</div>
+	<!-- mes recompences -->
+	<div>
+		<h1 lang="fr"> Mes récompenses </h1>
+		<p>
+			hello my name is Faizou
+		</p>
+	</div>
 </body>
 
 </html>
