#2 add bronze medaillon

--- a/hello.html
+++ b/hello.html
@@ -29,7 +29,7 @@
 	<div>
 		<h1 lang="fr"> Mes récompenses </h1>
 		<p>
-			hello my name is Faizou
+			<img src="images/medal_bronze.png">
 		</p>
 	</div>
 </body>
