--- a/hello.html
+++ b/hello.html
@@ -30,6 +30,7 @@
 		<h1 lang="fr"> Mes récompenses </h1>
 		<p>
 			<img src="images/medal_bronze.png">
+			<img src="images/medal_silver.png">
 		</p>
 	</div>
 </body>
