ajout command git

--- a/hello.html
+++ b/hello.html
@@ -33,6 +33,13 @@
 			<img src="images/medal_silver.png">
 		</p>
 	</div>
+	<!-- git commands-->
+	<div>
+		<h1 lang="fr"> Mes commandes gits </h1>
+		<code>
+			git pull 
+		</code>
+	</div>
 </body>
 
 </html>
